deconnexion et redirection vers la page index

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,10 @@ security:
             form_login:
                 login_path: security_login
                 check_path: security_login
+            
+            logout:
+                path: security_logout
+                target: blog
                 
             
 
